tests/toy/neg/001659_mutation.toylang
program a = { while a 0 sleep; } .
